src/app/App.css
.App {
  text-align: center;
  font-family: 'Roboto', sans-serif;
}

.App-logo {
  height: 40px;
}

.App-header {
  background-color: #006cab;
  padding-top: 20px;
  color: white;
  align-items:flex-end;
}

.App-title {
  font-size: 1.5em;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

#toolbar{
  background-color: #006cab;
}

#search_bar{
  min-width: 300px;
  width: 60%;
  margin: 20px;
}

#unit_list{
  margin: 20px 0px;
  width: 90%;
  min-width: 20em;
  max-width: 30em;
  display: inline-block;
}

#unit_detail{
  margin: 20px;
  width: 90%;
  min-width: 20em;
  max-width: 30em;
  display: inline-block;
  vertical-align: top;
}

#unit_list_item{
  text-align: left;
  width: inherit;
  padding: 10px 15px;
}

#unit_list_item:hover{
  background-color: AliceBlue;
}

#unit_list_item:active{
  background-color: Lavender;
}

#unit_detail_body{
  text-align: left;
}

#main_content{
  margin: 0px 20px;
}

#loading{
  margin: 20px;
  font-size: large;
  font-weight: bold;
}

#unit_detail_header{
  font-weight: bold;
}

#location_header{
  text-decoration: underline;
}

.my-bordered-list {
    /* remove the side padding. we'll be placing it around the item instead. */
    padding-right: 0;
    padding-left: 0;
  }
  .my-bordered-list .mdc-list-item {
    /* Add the list side padding padding to the list item. */
    padding: 0 16px;
    /* Add a border around each element. */
    border: 1px solid rgba(0, 0, 0, .12);
  }
  /* Ensure adjacent borders don't collide with one another. */
  .my-bordered-list .mdc-list-item:not(:first-child) {
    border-top: none;
  }

